ingress/tlssecretingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ranjithtlsingress
spec:
 tls:
 - hosts:
    - ranjithstls.website.com
   secretName: tlssecret
 rules:
 - host: ranjithstls.website.com
   http:
    paths:
     - backend:
        serviceName: tlsnodeport
        servicePort: 8080
